Swap CV link and email

--- a/style.css
+++ b/style.css
@@ -67,9 +67,6 @@ h1, h2 {
   font-style: italic;
 }
 
-a {
-  color: var(--text-color);
-}
 
 
 /* SECTION STYLING */
@@ -135,7 +132,9 @@ a {
 }
 
 .intro_text_link {
-  color: var(--title-color);
+  color: #007698;
+  text-decoration: none;
+  font-weight: bolder;
   font-family: 'Spectral', serif;
 }
 
@@ -218,11 +217,25 @@ a {
   font-size: 1.5em;
 }
 
+.projects_block a {
+  color: #007698;
+  text-decoration: none;
+  font-weight: bolder;
+  font-family: 'Spectral', serif;
+
+  /* padding: 10px;
+  border: 2px #312f32 solid;
+  color: var(--title-color);
+  box-shadow: 2px 2px 2px #312f32;
+  border-radius: 10px; */
+}
+
 .projects_button {
   width: 200px;
   padding: 20px;
   margin: 20px auto 0px auto;
   border: 2px #312f32 solid;
+  color: var(--title-color);
   box-shadow: 2px 2px 2px #312f32;
 
   font-size: 1em;
