--- a/style.css
+++ b/style.css
@@ -1,34 +1,12 @@
 
 :root {
-  /* ORIGINAL
-  --main-background-color: #e7e7e9;
-  --section-background-color: #f4f4f7f7;
-  --frame-color: #312f32;
-  --title-color: #1e1d1f;
-  --text-color: #312f32; */
-
-  /* BLUE THAMES
-  --main-background-color: #e7e7e9;
-  --section-background-color: #f4f4f7f7;
-  --frame-color: #001c40;
-  --title-color: #00214c;
-  --text-color: #312f32; */
-
-  /* NIGHTIME
-  --frame-color: #FFFFE5;
-  --main-background-color: #001737;
-  --title-color: #FFFFE5;
-  --text-color: #FFFFE5;
-  --section-background-color: #001737; */
-
-  /* NIGHTFLIGHT */
   --frame-color: #001737;
   --main-background-color: #001737;
   --title-color: #001737;
   --text-color: #001737;
   --section-background-color: #FFFFE5;
+  --links-color: #007698;
 }
-
 
 /*  GENERAL STYLING */
 
@@ -36,7 +14,6 @@ html {
   border: none;
   /* background: url('assets/london-ffffe5-90pc.png') no-repeat fixed center; /* SHINY: london-ffffe5 or london-ffffe5-90pc / DARK GREY: ldn312f32 */
   /* background-size: cover; */
-
 
   background: url("assets/london-ffffe5-90pc.png") no-repeat center center fixed;
   -webkit-background-size: cover;
@@ -114,14 +91,13 @@ h1, h2 {
   height: 35px;
   padding: 15px;
   padding-top: 20px;
-  opacity: 0.75;
-  filter: brightness(0);
-  transition: opacity 0.6s;
+  opacity: 0.85;
+  transition: opacity 0.5s;
   user-select: none;
 }
 
 .top_icon_img:hover {
-  opacity: 0.4;
+  opacity: 0.6;
 }
 
 /* INTRO SECTION */
@@ -131,7 +107,7 @@ h1, h2 {
 }
 
 .intro_text_link {
-  color: #007698;
+  color: var(--links-color);
   text-decoration: none;
   font-weight: bolder;
   font-family: 'Spectral', serif;
@@ -294,3 +270,35 @@ h1, h2 {
   }
 
 }
+
+
+/* Colour options */
+
+/* ORIGINAL
+--main-background-color: #e7e7e9;
+--section-background-color: #f4f4f7f7;
+--frame-color: #312f32;
+--title-color: #1e1d1f;
+--text-color: #312f32; */
+
+/* BLUE THAMES
+--main-background-color: #e7e7e9;
+--section-background-color: #f4f4f7f7;
+--frame-color: #001c40;
+--title-color: #00214c;
+--text-color: #312f32; */
+
+/* NIGHTIME
+--frame-color: #FFFFE5;
+--main-background-color: #001737;
+--title-color: #FFFFE5;
+--text-color: #FFFFE5;
+--section-background-color: #001737; */
+
+/* NIGHTFLIGHT
+--frame-color: #001737;
+--main-background-color: #001737;
+--title-color: #001737;
+--text-color: #001737;
+--section-background-color: #FFFFE5;
+--links-color: #007698; */
