--- a/style.css
+++ b/style.css
@@ -12,9 +12,6 @@
 
 html {
   border: none;
-  /* background: url('assets/london-ffffe5-90pc.png') no-repeat fixed center; /* SHINY: london-ffffe5 or london-ffffe5-90pc / DARK GREY: ldn312f32 */
-  /* background-size: cover; */
-
   background: url("assets/london-ffffe5-90pc.png") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -120,6 +117,7 @@ h1, h2 {
 }
 
 .techs_images {
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
@@ -149,7 +147,6 @@ h1, h2 {
 /* PROJECT SECTION */
 
 .projects {
-
 }
 
 .projects_title {
@@ -213,7 +210,7 @@ h1, h2 {
   text-decoration: none;
 
   border-radius: 10px;
-  transition: 0.8s linear;
+  transition: 0.6s linear;
   cursor: pointer;
 }
 
