--- a/style.css
+++ b/style.css
@@ -10,9 +10,41 @@
 
 /*  GENERAL STYLING */
 
+
+@media (max-width: 599px) {
+  html {
+    background: url("assets/london/london-600.png") no-repeat center center fixed;
+  }
+}
+
+@media (min-width: 600px) {
+  html {
+    background: url("assets/london/london-900.png") no-repeat center center fixed;
+  }
+}
+
+@media (min-width: 900px) {
+  html {
+    background: url("assets/london/london-1200.png") no-repeat center center fixed;
+  }
+}
+
+  @media (min-width: 1200px) {
+    html {
+      background: url("assets/london/london-1800.png") no-repeat center center fixed;
+    }
+}
+
+  @media (min-width: 1800px) {
+    html {
+      background: url("assets/london/london-2400.png") no-repeat center center fixed;
+    }
+}
+
+
 html {
   border: none;
-  background: url("assets/london-ffffe5-90pc.png") no-repeat center center fixed;
+  background: url("assets/london/london-1800.png") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
